# bevy_wind_waker_shader

./: Cargo.toml  readme.md
.github/: FUNDING.yml
.github/workflows/: ci.yml
assets/shaders/: extended_material.wgsl  toon_shader.wgsl
examples/: basic.rs  change_color_palette.rs  scene.rs
src/: components.rs  lib.rs  main.rs  plugin.rs  systems.rs
src/assets/: toon_shader.wgsl
